--- a/wss/TOC/19_27/css/style.css
+++ b/wss/TOC/19_27/css/style.css
@@ -53,7 +53,7 @@ body {
 	margin: 5% auto 0;
 	width: 50%;
 }
-#container .question_are {
+#container .question_area {
 	width: 80%;
 	margin: 4% auto 0;
 }
