--- a/wss/TOC/19_27/css/style.css
+++ b/wss/TOC/19_27/css/style.css
@@ -57,7 +57,7 @@ body {
 	display: flex;
 	width: 80%;
 	margin: 4% auto 0;
-	margin-top 10px;
+
 }
 #container .question_area .column {
 	float: left;
@@ -72,7 +72,7 @@ body {
 	font-size: 1.4em;
     	width: 20%;
     	padding: 10px;
-	word-break: normal;
+	margin-top: 10px;
 }
 #container .question_area .weekly {
 	border-style: solid solid solid none;
@@ -82,7 +82,7 @@ body {
 	font-size: 1.4em;
     	width: 80%;
     	padding: 10px;
-	word-break: normal;
+	margin-top: 10px;
 }
 #container .question_area:after {
  	 content: "";
