--- a/wss/TOC/19_28/css/style.css
+++ b/wss/TOC/19_28/css/style.css
@@ -71,7 +71,7 @@ body {
 	font-size: 1.4em;
     	width: 20%;
     	padding: 10px;
-	word-break: normal;
+	margin-top: 10px;
 }
 #container .question_area .weekly {
 	border-style: solid solid solid none;
@@ -81,7 +81,7 @@ body {
 	font-size: 1.4em;
     	width: 80%;
     	padding: 10px;
-	word-break: normal;
+	margin-top: 10px;
 }
 #container .question_area:after {
  	 content: "";
