--- a/wsm/TOC/css/style.css
+++ b/wsm/TOC/css/style.css
@@ -190,7 +190,7 @@ body {
 	width:100%;
 	margin: 10% auto 0;
 	padding: 3% 0 4%;
-	background: #f5f5dc;
+	background: ##f6626b;
 	border-top: 1px solid #000;
 }
 
