--- a/TOC/19_10/css/style.css
+++ b/TOC/19_10/css/style.css
@@ -49,9 +49,23 @@ body {
 	font-size: 1.4em;
 	line-height: 1.4em;
 }
+#container .grid-container {
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  margin: 10px 0 10px;
+  height: 100%;
+
+}
+#container .grid-item {
+
+}
+
+#container .img_nav {
+    margin: 130% auto 0 ;
+    width: 30%;
+}
 #container .img_wj {
-	margin: 5% auto 0;
-	width: 50%;
+	width: 100%;
 }
 #container .comment_area {
 	margin-top: 5%;
