--- a/TOC/19_10/css/style.css
+++ b/TOC/19_10/css/style.css
@@ -59,10 +59,11 @@ body {
 #container .grid-item {
 
 }
-
 #container .img_nav {
-    margin: 130% auto 0 ;
-    width: 30%;
+    margin-top: 120%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
 #container .img_wj {
 	width: 100%;
