--- a/wsm/TOC/19_28/css/style.css
+++ b/wsm/TOC/19_28/css/style.css
@@ -49,9 +49,30 @@ body {
 	font-size: 1.4em;
 	line-height: 1.4em;
 }
+#container .alternate {
+	margin-top:5%;
+    position: relative;
+
+    }
 #container .img_wj {
 	margin: 5% auto 0;
 	width: 50%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+
+}
+
+.alternate:hover .overlay {
+  opacity: 1;
 }
 #container .question_area {
 	display: flex;
