--- a/wsc/TOC/19_28/css/style.css
+++ b/wsc/TOC/19_28/css/style.css
@@ -9,7 +9,7 @@ ul {
 	list-style:none;
 }
 body {
-	background: #7f7f7f;
+	background: #999999;
 	color: #000;
 	
 	font-size: 15px;
@@ -24,7 +24,7 @@ body {
   width: 100%;
   font-size: 0.6em;
   color: #000;
-  background: #f5f5dc;
+  background: #f0ffff;
 }
 #container img {
   line-height: 0;
