--- a/wsc/TOC/19_28/css/style.css
+++ b/wsc/TOC/19_28/css/style.css
@@ -189,7 +189,7 @@ body {
 	width:100%;
 	margin: 10% auto 0;
 	padding: 3% 0 4%;
-	background: #f5f5dc;
+	background: #f0ffff;
 	border-top: 1px solid #000;
 }
 
