--- a/wsm/TOC/wsmhub.css
+++ b/wsm/TOC/wsmhub.css
@@ -1,7 +1,7 @@
 body {
  margin:0;
-  background: black;
-  color: white;
+  background: #f5f5dc;
+  color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
   .center {
@@ -50,7 +50,7 @@ body {
   margin: 0;
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: yellow;
+  background-color: red;
   color: black;
 }
 .dropdown-content {
@@ -76,37 +76,74 @@ body {
   display: block;
 }	
  .content {
-  max-width: 1000px;
+  max-width: 1080px;
   margin-top:60px;
   margin-left: auto;
   margin-right: auto;
   }
-img { 
-  width: 100%;
-  max-width: 1000px;
-}
  h1 {
   font-size: 1.5em;
-  border-bottom: 3px solid yellow;
+  border-bottom: 3px solid red;
 }
-h2 {
- font-size: 1.2em;
+ h2 {
+ font-size: 1em;
 }
-h2 a {
+div.gallery  a {
      text-decoration: none;
 }
-h2 a {
-	color: #fff;
+div.gallery  a {
+	color: black;
 }
-h2 a:link {
-	color: #fff;
+div.gallery  a:link {
+	color: black;
 }
-h2 a:visited {
-	color: #fff;
+div.gallery  a:visited {
+	color: black;
 }
-h2 a:hover {
-	color: #ffe404;
+div.gallery  a:hover {
+	color: red;
 }
-h2 a:active {
-	color: #fff;
+div.gallery  a:active {
+	color: black;
+}
+h3 {
+	font-size:0.85em;
+}
+div.gallery {
+  border: 1px solid #ccc;
+}
+div.gallery:hover {
+  border: 1px solid #777;
+}
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+div.desc {
+  padding: 10px;
+  text-align: center;
+}
+* {
+  box-sizing: border-box;
+}
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 49.99999%;
+  }
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
