--- a/TOC/wsjhub.css
+++ b/TOC/wsjhub.css
@@ -31,7 +31,7 @@ body {
   margin-right: 15px;
 }
 .navbar .fit{
-  max-width: 1000px;
+  max-width: 1080px;
   margin-left: auto;
   margin-right: auto;
   }
@@ -77,12 +77,13 @@ body {
 }	
  .content {
   width:95%;
-  max-width: 1000px;
+  max-width: 1080px;
   margin-top:60px;
   margin-left: auto;
   margin-right: auto;
   }
 img { 
+text-align: center;
   width: 100%;
   max-width: 1000px;
 }
