--- a/TOC/wsjhub.css
+++ b/TOC/wsjhub.css
@@ -74,11 +74,16 @@ body {
 }
 .dropdown:hover .dropdown-content {
   display: block;
-}	
+}
+ .header {
+  max-width: 1080px;
+  margin-top:60px;
+  margin-left: auto;
+  margin-right: auto;
+  }
  .content {
   width:95%;
   max-width: 1080px;
-  margin-top:60px;
   margin-left: auto;
   margin-right: auto;
   }
