--- a/TOC/19_10/css/style.css
+++ b/TOC/19_10/css/style.css
@@ -84,9 +84,14 @@ body {
   margin: 0;
 }
 
-::after(#nav-center),.navbar a:hover, .dropdown:hover .dropbtn {
+.navbar a:hover, .dropdown:hover .dropbtn {
   background-color: yellow;
   color: black;
+}
+
+.navbar #nav-center a:hover, .dropbtn {
+  background-color: ;
+  color: ;
 }
 .dropdown-content {
   display: none;
