--- a/TOC/19_29/css/style.css
+++ b/TOC/19_29/css/style.css
@@ -3,24 +3,122 @@
 html,body,div,ul,h1,h2,h3,h4,h5,h6,p,img,span,a {
   margin: 0;
   padding: 0;
-  line-height: 0;
+  line-height: 0; 
 }
 ul {
 	list-style:none;
 }
 body {
-	background: #333;
+	background: #555;
 	color: #000;
-	
 	font-size: 15px;
 	line-height: 1.231;
 	word-break: normal;
 }
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  height: 50px;
+  width: 100%; /* Full width */
+}
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+#nav-center{
+  float: none;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  font-size: 16px;
+  color: white;
+  padding-bottom:5px;
+  text-align: center;
+   transform: translate(-50%, -50%);
+     transition: top 0.3s;
+  }
+#nav-center a{
+  padding: 0 5px;
+  }
+#nav-center .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 
+}  
+#nav-center img{
+    width: 10px;
+    height: 20px;
+}
+.navbar .lang {
+  float: right;
+  margin-right: 15px;
+}
+.navbar .fit{
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: yellow;
+  color: black;
+}
+#nav-center a:hover,.dropbtn {
+  background-color: transparent;
+  color: black;
+}
+.dropdown-content {
+  display: none;
+  position: fixed;
+  background-color: #f9f9f9;
+  min-width: 50px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 /**************************/
 /* TOP */
 /**************************/
 #container {
+	margin-top:60px;
   width: 100%;
   font-size: 0.6em;
   color: #fff;
@@ -49,9 +147,22 @@ body {
 	font-size: 1.4em;
 	line-height: 1.4em;
 }
+#container #grid-container {
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  margin: 10px 0 10px;
+}
+#container .grid-item {
+
+}
+#container .img_nav {
+    margin-top: 120%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+}
 #container .img_wj {
-	margin: 5% auto 0;
-	width: 50%;
+	width: 100%;
 }
 #container .comment_area {
 	margin-top: 5%;
@@ -72,7 +183,7 @@ body {
 	text-align: left;
 }
 #container h2 a .arrow {
-	width: 4%;
+	width: .6em;
 	display: inline-block;
 }
 #container h2 a {
@@ -157,21 +268,7 @@ body {
 	background: #000;
 	border-top: 1px solid #fff;
 }
-#footer a {
-	color:  #ffe404;
-}
-#footer a:link {
-	color:  #ffe404;
-}
-#footer a:visited {
-	color:  #ffe404;
-}
-#footer a:hover {
-	color: #ffe404;
-}
-#footer a:active {
-	color:  #ffe404;
-}
+
 .cooyactxt {
   margin: 0 auto;
 	margin-bottom: 0.3em;
@@ -197,13 +294,14 @@ body {
 
 @media (max-width: 768px) {
   #container {
+  margin-top:50px;
     width: 100%;
   }
 }
 
 @media (min-width: 769px) {
 	#container {
-		margin: 0 auto;
+		margin: 50px auto 0;
 		font-size: 1em;
 		width: 720px;
 	}
@@ -225,8 +323,6 @@ body {
 	#container .detail_area .r_side {
 		font-size: 1.6em;
 	}
-
-
 }
 
 .mgt5per {
