--- a/TOC/wsjhub.css
+++ b/TOC/wsjhub.css
@@ -17,6 +17,7 @@ body {
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+height:50px;
 }
 .navbar a {
   float: left;
@@ -25,6 +26,7 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+
 }
 .navbar .lang {
   float: right;
@@ -77,7 +79,7 @@ body {
 }
  .header {
   max-width: 1080px;
-  margin-top:60px;
+  margin-top:50px;
   margin-left: auto;
   margin-right: auto;
   }
