--- a/TOC/wsjhub.css
+++ b/TOC/wsjhub.css
@@ -14,11 +14,9 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
-
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -26,8 +24,8 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-
 }
+
 .navbar .lang {
   float: right;
   margin-right: 15px;
@@ -42,7 +40,7 @@ body {
   overflow: hidden;
 }
 .dropdown .dropbtn {
-	cursor: pointer;
+  cursor: pointer;
   font-size: 16px;  
   border: none;
   outline: none;
@@ -53,11 +51,11 @@ body {
   margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+.navbar a:hover, .dropdown:hover  .dropbtn, .dropbtn:focus {
   background-color: yellow;
   color: black;
 }
-.dropdown-content {
+.dropdown-content {	
   display: none;
   position: fixed;
   background-color: #f9f9f9;
@@ -75,6 +73,7 @@ body {
 }
 .dropdown-content a:hover {
   background-color: #ddd;
+  
 }
 .show {
   display: block;
