--- a/TOC/wsjhub.css
+++ b/TOC/wsjhub.css
@@ -15,6 +15,9 @@ body {
   overflow: hidden;
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  top: 0;
+  width: 100%
 }
 
 .navbar a {
