--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -100,7 +100,7 @@ text-align: center;
 }
  h1 {
   font-size: 1.5em;
-  border-bottom: 3px solid yellow;
+  border-bottom: 1.5px solid black;
 }
 h2 {
  font-size: 1.2em;
