--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -2,7 +2,7 @@ body {
  margin:0;
   background: white;
   color: black;
-  font-family: メイリオ, Meiryo, Verdana, Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "ＭＳ Ｐゴシック", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
  }
   .center {
   display: block;
@@ -11,9 +11,9 @@ body {
   width: 90%;
   }
 .data {
-  min-width: 1080px; 
-  margin: 0 auto; 
-  font-family: "Lucida Console", Monaco, monospace
+  min-width: 1080px ; 
+  margin: 0 auto ; 
+  font-family: "Lucida Console", Monaco, monospace  ;
 }	  
 .navbar {
   overflow: hidden;
