--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -5,7 +5,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
  }
  span{
- font-size: .8em
+ font-size: 12.5px
  }
   .center {
   display: block;
