--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -89,7 +89,7 @@ font-weight: bold;
 .dropdown-content {	
   display: none;
   position: fixed;
-  background-color: #f9f9f9;
+  background-color: #f2f2eb;
 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
