--- a/TOC/oricon/oricon.css
+++ b/TOC/oricon/oricon.css
@@ -20,8 +20,6 @@ body {
   padding-top:10px;
   padding-left:10px;
   padding-right: 5px;
-	min-width:830px;
-max-width:73%;
   margin: 0 auto ; 
   font-family: "Courier New", Courier, monospace  ;
 }	
@@ -29,13 +27,21 @@ max-width:73%;
   float: left;
   padding-top: 9px;
   padding-left: 5px;
-  max-width:22%;
   margin: 0 auto ; 
 }
 .bookmark .quick{
+ white-space: nowrap;
  overflow-x: scroll;
 }
-
+@media only screen and (min-width: 200px) {
+.data{width:100%;}
+.bookmark{width:100%;}
+}
+@media only screen and (min-width: 1200px) {
+.data{min-width:830px;
+max-width:73%;}
+.bookmark{width:22%;}
+}
 .footer{
 width: 100%;
 float:left; 
