--- a/TOC/reprint/issue.css
+++ b/TOC/reprint/issue.css
@@ -1,65 +1,9 @@
 @charset "utf-8";
 
-#reprint_11690 table{mso-displayed-decimal-separator:"\.";
+#reprint_2148 table
+	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
-#reprint_11690 .xl1511690{
-	padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
-	mso-background-source:auto;
-	mso-pattern:auto;
-
-	}
-#reprint_11690 .xl6311690{
-	padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:left;
-	vertical-align:bottom;
-	mso-background-source:auto;
-	mso-pattern:auto;
-
-	}
-#reprint_11690 .xl6411690{
-	padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:"\[ENG\]\[$-409\]mmmm\\ d\\\,\\ yyyy\;\@";
-	text-align:left;
-	vertical-align:bottom;
-	mso-background-source:auto;
-	mso-pattern:auto;
-
-	}
-#reprint_11690 .xl6511690
+#reprint_2148 .xl152148
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -71,14 +15,31 @@
 	text-decoration:none;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:"\[ENG\]\[$-409\]mmmm\\ d\\\,\\ yyyy\;\@";
+	mso-number-format:General;
 	text-align:general;
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-;
-	}
-#reprint_11690 .xl6611690
+	white-space:nowrap;}
+#reprint_2148 .xl632148
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:"\[ENG\]\[$-409\]d\/mmm\/yyyy\;\@";
+	text-align:left;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+#reprint_2148 .xl642148
 	{color:black;
 	font-size:11.0pt;
 	font-weight:400;
@@ -91,11 +52,28 @@
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-
-	padding-left:12px;
-	mso-char-indent-count:1;
-	}
-#reprint_11690 .xl6711690
+	white-space:nowrap;
+	padding-left:24px;
+	mso-char-indent-count:2;}
+#reprint_2148 .xl652148
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:"\;\;\;";
+	text-align:general;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+#reprint_2148 .xl662148
 	{color:black;
 	font-size:11.0pt;
 	font-weight:400;
@@ -103,11 +81,11 @@
 	text-decoration:none;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:"\[ENG\]\[$-409\]mmmm\\ d\\\,\\ yyyy\;\@";
+	mso-number-format:"\;\;\;";
 	text-align:left;
 	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
-	padding-left:24px;
-	mso-char-indent-count:2;
-	}
+	white-space:nowrap;
+	padding-left:12px;
+	mso-char-indent-count:1;}
